[project]
name = "hntags"
version = "0.1.0"
description = "HN Tags - generate a categorised version of the Hacker News front page"
authors = [
    { name = "Dave Minter", email = "dave@paperstack.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.13",
    "firebase>=4.0.1",
    "jinja2>=3.1.6",
    "ollama>=0.5.1",
]

[project.scripts]
hntags = "hntags:main"

[project.urls]
homepage = "https://hntags.com"
source = "https://github.com/dcminter/hntags.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
